crates/commenter-cat-engine/tests/snapshots/golden_extraction__golden_python_extraction.snap
---
source: crates/commenter-cat-engine/tests/golden_extraction.rs
expression: "extract_and_map(source, Language::Python, \"m.py\")"
---
[
    GoldenComment {
        kind: "docstring",
        bound_symbol: Some(
            "<module>",
        ),
        start_line: 1,
        end_line: 1,
        text: "\"\"\"Module docstring.\"\"\"",
    },
    GoldenComment {
        kind: "line",
        bound_symbol: Some(
            "parse",
        ),
        start_line: 4,
        end_line: 4,
        text: "# a leading note",
    },
    GoldenComment {
        kind: "docstring",
        bound_symbol: Some(
            "parse",
        ),
        start_line: 6,
        end_line: 6,
        text: "\"\"\"Parse the data.\"\"\"",
    },
    GoldenComment {
        kind: "line",
        bound_symbol: Some(
            "parse",
        ),
        start_line: 7,
        end_line: 7,
        text: "# inline TODO: validate",
    },
    GoldenComment {
        kind: "line",
        bound_symbol: Some(
            "Cache",
        ),
        start_line: 11,
        end_line: 11,
        text: "# cache size note",
    },
]
